# cojac

./: .gitattributes  .gitignore  README.md  conda_cojac_env.yaml  cooc-colourmut  cooc-curate  cooc-mutbamscan  cooc-pubmut  cooc-tabmut  generate_sigs_nextstrains.py  phe2cojac  pyproject.toml
.github/: dependabot.yml
cojac/: __init__.py  _version.py  cooc_colourmut.py  cooc_curate.py  cooc_mutbamscan.py  cooc_pubmut.py  cooc_tabmut.py  generate_sigs_nextstrains.py  main.py  mut_parser.py  phe2cojac.py  sig_generate.py
notebooks/: MutationOccurrenceVisualization.ipynb  README.md  Signature_mutations_in_patient_samples.ipynb  batchScatterPlot.R  conda-bio1.yaml  conda-rpy2.yaml  mut-table.ipynb  overviewTable.R  snv_count_wastewater3.ipynb  ww_delta.ipynb  ww_modelling.ipynb  ww_smoothing.ipynb
tests/: test_integration.py
voc/: AY42_mutations.yaml  alpha_mutations_full.yaml  beta_mutations_full.yaml  br_mutations.yaml  delta_mutations_full.yaml  eu_mutations.yaml  gamma_mutations_full.yaml  in1_mutations.yaml  in2_mutations.yaml  in3_mutations.yaml  in_mutations.yaml  kappa_mutations_full.yaml  mu_mutations.yaml  omicron_ba1_mutations.yaml  omicron_ba1_mutations_full.yaml  omicron_ba2121_mutations_full.yaml  omicron_ba275_mutations_full.yaml  omicron_ba2_mutations.yaml  omicron_ba2_mutations_full.yaml  omicron_ba4_mutations_full.yaml  omicron_ba5_mutations_full.yaml  omicron_bq11_mutations_full.yaml  omicron_mutations.yaml  omicron_xbb_mutations_full.yaml  sa_mutations.yaml  uk_mutations.yaml  za2_mutations_temp.yaml  za_mutations.yaml
(+10 files in other folders)
