[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning"]
build-backend = "poetry_dynamic_versioning.backend"

[tool.poetry]
name = "cojac"
version = "0.0.0"
description = "A set of commandline tools to analyse co-occurrence of mutations on amplicons."
license = "GPL-3.0-or-later"
authors = ["David Dreifuss <dadreifuss@gmail.com>", "Ivan Blagoev Topolsky <ivan.topolsky@bsse.ethz.ch>", "kpj <kim.philipp.jablonski@gmail.com>"]
maintainers = ["Ivan Blagoev Topolsky <ivan.topolsky@bsse.ethz.ch>"]
readme = "README.md"
repository = "https://github.com/cbg-ethz/cojac"

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"

[tool.poetry.dependencies]
python = "^3.8.0"
numpy = ">=1.2"
pandas = ">=1.0"
PyYAML = "^6.0"
pysam = ">=0.18.0"
strictyaml = "^1.6.1"
click = "^8.0.3"
requests = "^2.27.1"

[tool.poetry.dev-dependencies]
black = "^24.2.0"
pytest = "^8.3.5"

[tool.poetry.scripts]
cojac = "cojac:cli"
cooc_colourmut = "cojac:cooc_colourmut"
cooc_mutbamscan = "cojac:cooc_mutbamscan"
cooc_pubmut = "cojac:cooc_pubmut"
cooc_tabmut = "cojac:cooc_tabmut"
phe2cojac = "cojac:phe2cojac"
